# schemas/src/ioserver.openapi.yml
@@ -1,196 +1,80 @@
 openapi: 3.0.3
 info:
-  title: ''
+  title: ""
   version: 0.0.0
 paths:
-  /barcode/:
-    get:
-      operationId: barcode_list
-      description: API endpoint that allows users to be viewed or edited.
-      parameters:
-      - name: page
-        required: false
-        in: query
-        description: A page number within the paginated result set.
-        schema:
-          type: integer
-      tags:
-      - barcode
-      security:
-      - cookieAuth: []
-      - basicAuth: []
-      - {}
-      responses:
-        '200':
-          content:
-            application/json:
-              schema:
-                $ref: '#/components/schemas/PaginatedBarcodeList'
-          description: ''
-    post:
-      operationId: barcode_create
-      description: API endpoint that allows users to be viewed or edited.
-      tags:
-      - barcode
-      requestBody:
-        content:
-          application/json:
-            schema:
-              $ref: '#/components/schemas/Barcode'
-          application/x-www-form-urlencoded:
-            schema:
-              $ref: '#/components/schemas/Barcode'
-          multipart/form-data:
-            schema:
-              $ref: '#/components/schemas/Barcode'
-        required: true
-      security:
-      - cookieAuth: []
-      - basicAuth: []
-      - {}
-      responses:
-        '201':
-          content:
-            application/json:
-              schema:
-                $ref: '#/components/schemas/Barcode'
-          description: ''
-  /barcode/{id}/:
-    get:
-      operationId: barcode_retrieve
-      description: API endpoint that allows users to be viewed or edited.
-      parameters:
-      - in: path
-        name: id
-        schema:
-          type: integer
-        description: A unique integer value identifying this barcode.
-        required: true
-      tags:
-      - barcode
-      security:
-      - cookieAuth: []
-      - basicAuth: []
-      - {}
-      responses:
-        '200':
-          content:
-            application/json:
-              schema:
-                $ref: '#/components/schemas/Barcode'
-          description: ''
-    put:
-      operationId: barcode_update
-      description: API endpoint that allows users to be viewed or edited.
-      parameters:
-      - in: path
-        name: id
-        schema:
-          type: integer
-        description: A unique integer value identifying this barcode.
-        required: true
-      tags:
-      - barcode
-      requestBody:
-        content:
-          application/json:
-            schema:
-              $ref: '#/components/schemas/Barcode'
-          application/x-www-form-urlencoded:
-            schema:
-              $ref: '#/components/schemas/Barcode'
-          multipart/form-data:
-            schema:
-              $ref: '#/components/schemas/Barcode'
-        required: true
-      security:
-      - cookieAuth: []
-      - basicAuth: []
-      - {}
-      responses:
-        '200':
-          content:
-            application/json:
-              schema:
-                $ref: '#/components/schemas/Barcode'
-          description: ''
-    patch:
-      operationId: barcode_partial_update
-      description: API endpoint that allows users to be viewed or edited.
-      parameters:
-      - in: path
-        name: id
-        schema:
-          type: integer
-        description: A unique integer value identifying this barcode.
-        required: true
-      tags:
-      - barcode
-      requestBody:
-        content:
-          application/json:
-            schema:
-              $ref: '#/components/schemas/PatchedBarcode'
-          application/x-www-form-urlencoded:
-            schema:
-              $ref: '#/components/schemas/PatchedBarcode'
-          multipart/form-data:
-            schema:
-              $ref: '#/components/schemas/PatchedBarcode'
-      security:
-      - cookieAuth: []
-      - basicAuth: []
-      - {}
-      responses:
-        '200':
-          content:
-            application/json:
-              schema:
-                $ref: '#/components/schemas/Barcode'
-          description: ''
-    delete:
-      operationId: barcode_destroy
-      description: API endpoint that allows users to be viewed or edited.
-      parameters:
-      - in: path
-        name: id
-        schema:
-          type: integer
-        description: A unique integer value identifying this barcode.
-        required: true
-      tags:
-      - barcode
-      security:
-      - cookieAuth: []
-      - basicAuth: []
-      - {}
-      responses:
-        '204':
-          description: No response body
   /printBarcode:
     post:
       operationId: printBarcode_create
+      description: Request Print Barcode List
+      summary: Send a list of products to sticker printer
       tags:
-      - printBarcode
+        - printBarcode
+      requestBody:
+        content:
+          application/json:
+            schema:
+              $ref: "#/components/schemas/BarcodePrintRequest"
+          application/x-www-form-urlencoded:
+            schema:
+              $ref: "#/components/schemas/BarcodePrintRequest"
+          multipart/form-data:
+            schema:
+              $ref: "#/components/schemas/BarcodePrintRequest"
+        required: true
       security:
-      - cookieAuth: []
-      - basicAuth: []
-      - {}
+        - cookieAuth: []
+        - basicAuth: []
+        - {}
       responses:
-        '200':
-          description: No response body
+        "200":
+          content:
+            application/json:
+              schema:
+                type: boolean
+          description: ""
+        "400":
+          content:
+            application/json:
+              schema:
+                type: integer
+          description: ""
   /printShoppingList:
     post:
       operationId: printShoppingList_create
+      description: Request Print Shopping List
+      summary: Send a list of products to receipt printer
       tags:
-      - printShoppingList
+        - printShoppingList
+      requestBody:
+        content:
+          application/json:
+            schema:
+              $ref: "#/components/schemas/ShoppingListRequest"
+          application/x-www-form-urlencoded:
+            schema:
+              $ref: "#/components/schemas/ShoppingListRequest"
+          multipart/form-data:
+            schema:
+              $ref: "#/components/schemas/ShoppingListRequest"
+        required: true
       security:
-      - cookieAuth: []
-      - basicAuth: []
-      - {}
+        - cookieAuth: []
+        - basicAuth: []
+        - {}
       responses:
-        '200':
-          description: No response body
+        "200":
+          content:
+            application/json:
+              schema:
+                type: boolean
+          description: ""
+        "400":
+          content:
+            application/json:
+              schema:
+                type: integer
+          description: ""
   /schema/:
     get:
       operationId: schema_retrieve
@@ -200,123 +84,123 @@ paths:
         - YAML: application/vnd.oai.openapi
         - JSON: application/vnd.oai.openapi+json
       parameters:
-      - in: query
-        name: format
-        schema:
-          type: string
-          enum:
-          - json
-          - yaml
-      - in: query
-        name: lang
-        schema:
-          type: string
-          enum:
-          - af
-          - ar
-          - ar-dz
-          - ast
-          - az
-          - be
-          - bg
-          - bn
-          - br
-          - bs
-          - ca
-          - cs
-          - cy
-          - da
-          - de
-          - dsb
-          - el
-          - en
-          - en-au
-          - en-gb
-          - eo
-          - es
-          - es-ar
-          - es-co
-          - es-mx
-          - es-ni
-          - es-ve
-          - et
-          - eu
-          - fa
-          - fi
-          - fr
-          - fy
-          - ga
-          - gd
-          - gl
-          - he
-          - hi
-          - hr
-          - hsb
-          - hu
-          - hy
-          - ia
-          - id
-          - ig
-          - io
-          - is
-          - it
-          - ja
-          - ka
-          - kab
-          - kk
-          - km
-          - kn
-          - ko
-          - ky
-          - lb
-          - lt
-          - lv
-          - mk
-          - ml
-          - mn
-          - mr
-          - ms
-          - my
-          - nb
-          - ne
-          - nl
-          - nn
-          - os
-          - pa
-          - pl
-          - pt
-          - pt-br
-          - ro
-          - ru
-          - sk
-          - sl
-          - sq
-          - sr
-          - sr-latn
-          - sv
-          - sw
-          - ta
-          - te
-          - tg
-          - th
-          - tk
-          - tr
-          - tt
-          - udm
-          - uk
-          - ur
-          - uz
-          - vi
-          - zh-hans
-          - zh-hant
+        - in: query
+          name: format
+          schema:
+            type: string
+            enum:
+              - json
+              - yaml
+        - in: query
+          name: lang
+          schema:
+            type: string
+            enum:
+              - af
+              - ar
+              - ar-dz
+              - ast
+              - az
+              - be
+              - bg
+              - bn
+              - br
+              - bs
+              - ca
+              - cs
+              - cy
+              - da
+              - de
+              - dsb
+              - el
+              - en
+              - en-au
+              - en-gb
+              - eo
+              - es
+              - es-ar
+              - es-co
+              - es-mx
+              - es-ni
+              - es-ve
+              - et
+              - eu
+              - fa
+              - fi
+              - fr
+              - fy
+              - ga
+              - gd
+              - gl
+              - he
+              - hi
+              - hr
+              - hsb
+              - hu
+              - hy
+              - ia
+              - id
+              - ig
+              - io
+              - is
+              - it
+              - ja
+              - ka
+              - kab
+              - kk
+              - km
+              - kn
+              - ko
+              - ky
+              - lb
+              - lt
+              - lv
+              - mk
+              - ml
+              - mn
+              - mr
+              - ms
+              - my
+              - nb
+              - ne
+              - nl
+              - nn
+              - os
+              - pa
+              - pl
+              - pt
+              - pt-br
+              - ro
+              - ru
+              - sk
+              - sl
+              - sq
+              - sr
+              - sr-latn
+              - sv
+              - sw
+              - ta
+              - te
+              - tg
+              - th
+              - tk
+              - tr
+              - tt
+              - udm
+              - uk
+              - ur
+              - uz
+              - vi
+              - zh-hans
+              - zh-hant
       tags:
-      - schema
+        - schema
       security:
-      - cookieAuth: []
-      - basicAuth: []
-      - {}
+        - cookieAuth: []
+        - basicAuth: []
+        - {}
       responses:
-        '200':
+        "200":
           content:
             application/vnd.oai.openapi:
               schema:
@@ -334,43 +218,36 @@ paths:
               schema:
                 type: object
                 additionalProperties: {}
-          description: ''
+          description: ""
 components:
   schemas:
-    Barcode:
+    BarcodePrintRequest:
       type: object
       properties:
-        code:
-          type: string
-          maxLength: 20
+        data:
+          $ref: "#/components/schemas/ShoppingList"
       required:
-      - code
-    PaginatedBarcodeList:
+        - data
+    ShoppingList:
       type: object
       properties:
-        count:
-          type: integer
-          example: 123
-        next:
-          type: string
-          nullable: true
-          format: uri
-          example: http://api.example.org/accounts/?page=4
-        previous:
-          type: string
-          nullable: true
-          format: uri
-          example: http://api.example.org/accounts/?page=2
-        results:
+        list:
           type: array
           items:
-            $ref: '#/components/schemas/Barcode'
-    PatchedBarcode:
+            type: string
+            maxLength: 20
+            minLength: 3
+          maxItems: 10
+          minItems: 1
+      required:
+        - list
+    ShoppingListRequest:
       type: object
       properties:
-        code:
-          type: string
-          maxLength: 20
+        data:
+          $ref: "#/components/schemas/ShoppingList"
+      required:
+        - data
   securitySchemes:
     basicAuth:
       type: http
